--- a/packages/plasma-ui/package.json
+++ b/packages/plasma-ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-ui",
-  "version": "1.335.0",
+  "version": "1.336.0-dev.0",
   "description": "Salute Design System.",
   "main": "index.js",
   "module": "es/index.js",
@@ -12,7 +12,7 @@
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "@salutejs/plasma-core": "1.213.0",
+    "@salutejs/plasma-core": "1.214.0-dev.0",
     "@salutejs/plasma-typo": "0.42.0",
     "color": "3.1.2",
     "lodash.throttle": "4.1.1",
@@ -33,10 +33,10 @@
     "@babel/preset-env": "7.24.4",
     "@babel/preset-react": "7.24.1",
     "@babel/preset-typescript": "7.24.1",
-    "@salutejs/plasma-cy-utils": "0.143.0",
+    "@salutejs/plasma-cy-utils": "0.144.0-dev.0",
     "@salutejs/plasma-icons": "1.228.0",
-    "@salutejs/plasma-sb-utils": "0.213.0",
-    "@salutejs/plasma-tokens": "1.126.0",
+    "@salutejs/plasma-sb-utils": "0.214.0-dev.0",
+    "@salutejs/plasma-tokens": "1.127.0-dev.0",
     "@salutejs/use-virtual": "2.0.0",
     "@testing-library/react": "12.0.0",
     "@types/color": "3.0.2",
