--- a/packages/themes/plasma-themes/package.json
+++ b/packages/themes/plasma-themes/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-themes",
-  "version": "0.39.0",
+  "version": "0.40.0-dev.0",
   "description": "Plasma-themes package.",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
