--- a/website/plasma-website/package.json
+++ b/website/plasma-website/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-website",
-  "version": "0.568.0",
+  "version": "0.569.0-next-insol.0",
   "description": "Plasma Main App",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -19,10 +19,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@salutejs/plasma-b2c": "1.603.0",
+    "@salutejs/plasma-b2c": "1.604.0-next-insol.0",
     "@salutejs/plasma-colors": "0.16.0",
     "@salutejs/plasma-icons": "1.228.0",
-    "@salutejs/plasma-tokens": "1.127.0",
+    "@salutejs/plasma-tokens": "1.128.0-next-insol.0",
     "@salutejs/plasma-tokens-b2c": "0.65.0",
     "@salutejs/plasma-typo": "0.42.0",
     "classnames": "^2.5.1",
