--- a/website/sdds-crm-docs/package.json
+++ b/website/sdds-crm-docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/sdds-crm-docs",
-  "version": "0.25.0",
+  "version": "0.26.0-next-insol.0",
   "description": "SDDS-CRM documentation",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -31,11 +31,11 @@
     "@docusaurus/preset-classic": "3.6.1",
     "@docusaurus/theme-live-codeblock": "3.6.1",
     "@mdx-js/react": "3.0.0",
-    "@salutejs/plasma-docs-ui": "0.516.0",
+    "@salutejs/plasma-docs-ui": "0.517.0-next-insol.0",
     "@salutejs/plasma-icons": "1.228.0",
     "@salutejs/plasma-typo": "0.42.0",
-    "@salutejs/sdds-crm": "0.334.0",
-    "@salutejs/sdds-themes": "0.53.0",
+    "@salutejs/sdds-crm": "0.335.0-next-insol.0",
+    "@salutejs/sdds-themes": "0.54.0-next-insol.0",
     "@svgr/webpack": "8.1.0",
     "clsx": "^1.1.1",
     "docusaurus-theme-search-typesense": "0.25.0",
