--- a/website/sdds-finai-docs/package.json
+++ b/website/sdds-finai-docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/sdds-finai-docs",
-  "version": "0.27.0",
+  "version": "0.28.0-next-insol.0",
   "description": "SDDS-FINAI documentation",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -32,11 +32,11 @@
     "@docusaurus/preset-classic": "3.6.1",
     "@docusaurus/theme-live-codeblock": "3.6.1",
     "@mdx-js/react": "3.0.0",
-    "@salutejs/plasma-docs-ui": "0.516.0",
+    "@salutejs/plasma-docs-ui": "0.517.0-next-insol.0",
     "@salutejs/plasma-icons": "1.228.0",
     "@salutejs/plasma-typo": "0.42.0",
-    "@salutejs/sdds-finai": "0.326.0",
-    "@salutejs/sdds-themes": "0.53.0",
+    "@salutejs/sdds-finai": "0.327.0-next-insol.0",
+    "@salutejs/sdds-themes": "0.54.0-next-insol.0",
     "@svgr/webpack": "8.1.0",
     "clsx": "1.1.1",
     "docusaurus-theme-search-typesense": "0.25.0",
