ci(homeds): add package

--- a/.github/config-ci.json
+++ b/.github/config-ci.json
@@ -7,6 +7,7 @@
         "plasma-new-hope",
         "plasma-asdk",
         "plasma-giga",
+        "plasma-homeds",
         "sdds-serv",
         "sdds-dfa",
         "sdds-cs",
