ci: skip "docs" dir [no ci]

--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -6,6 +6,8 @@ on:
       - master
       - dev
       - next-insol
+    paths-ignore:
+      - 'docs/**'
 
 concurrency:
   # New commit on branch cancels running workflows of the same branch
