--- a/.github/workflows/documentation-deploy-pr.yml
+++ b/.github/workflows/documentation-deploy-pr.yml
@@ -5,9 +5,13 @@ on:
         branches:
             - dev
             - next-insol
+        paths-ignore:
+            - 'docs/**'
     pull_request:
         branches:
             - master
+        paths-ignore:
+            - 'docs/**'
 
 concurrency:
     # New commit on branch cancels running workflows of the same branch
