--- a/packages/plasma-web/package.json
+++ b/packages/plasma-web/package.json
@@ -43,6 +43,9 @@
   },
   "peerDependencies": {
     "@salutejs/plasma-icons": "^1.0.0",
+    "@salutejs/plasma-core": "1.214.0",
+    "@salutejs/plasma-hope": "1.360.0",
+    "@salutejs/plasma-new-hope": "0.347.0",
     "react": ">=16.13.1",
     "react-dom": ">=16.13.1",
     "styled-components": "^5.1.1"
