--- a/packages/themes/core-themes/package.json
+++ b/packages/themes/core-themes/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/core-themes",
-  "version": "0.24.0",
+  "version": "0.24.1-next-insol.0",
   "description": "Core-themes package",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
