--- a/packages/themes/plasma-themes/package.json
+++ b/packages/themes/plasma-themes/package.json
@@ -31,7 +31,7 @@
     "index.js.map"
   ],
   "devDependencies": {
-    "@salutejs/core-themes": "0.24.0",
+    "@salutejs/core-themes": "0.24.1-next-insol.0",
     "@types/node": "16.7.13",
     "ts-node": "10.2.1",
     "typescript": "4.2.4"
