--- a/packages/plasma-b2c/package.json
+++ b/packages/plasma-b2c/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-b2c",
-  "version": "1.607.0-next-insol.0",
+  "version": "1.607.1-next-insol.0",
   "description": "Salute Design System / React UI kit for business-related web applications.",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "exports": {
@@ -55,10 +55,10 @@
     "atLeast": 99.97
   },
   "dependencies": {
-    "@salutejs/plasma-core": "1.216.0-next-insol.0",
-    "@salutejs/plasma-hope": "1.362.0-next-insol.0",
-    "@salutejs/plasma-new-hope": "0.351.0-next-insol.0",
-    "@salutejs/plasma-themes": "0.40.0",
+    "@salutejs/plasma-core": "1.216.1-next-insol.0",
+    "@salutejs/plasma-hope": "1.362.1-next-insol.0",
+    "@salutejs/plasma-new-hope": "0.351.1-next-insol.0",
+    "@salutejs/plasma-themes": "0.40.1-next-insol.0",
     "@salutejs/plasma-tokens-b2c": "0.65.0",
     "@salutejs/plasma-tokens-web": "1.69.0",
     "@salutejs/plasma-typo": "0.42.0"
@@ -84,9 +84,9 @@
     "@rollup/plugin-commonjs": "25.0.7",
     "@rollup/plugin-node-resolve": "15.2.3",
     "@salutejs/plasma-colors": "0.16.0",
-    "@salutejs/plasma-cy-utils": "0.146.0-next-insol.0",
+    "@salutejs/plasma-cy-utils": "0.146.1-next-insol.0",
     "@salutejs/plasma-icons": "1.228.0",
-    "@salutejs/plasma-sb-utils": "0.216.0-next-insol.0",
+    "@salutejs/plasma-sb-utils": "0.216.1-next-insol.0",
     "@types/node": "16.7.13",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
