--- a/packages/plasma-giga/package.json
+++ b/packages/plasma-giga/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-giga",
-  "version": "0.334.0-next-insol.0",
+  "version": "0.334.1-next-insol.0",
   "description": "Salute Design System / React UI kit for PLASMA GIGA web applications",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "exports": {
@@ -32,8 +32,8 @@
     "directory": "packages/plasma-giga"
   },
   "dependencies": {
-    "@salutejs/plasma-new-hope": "0.351.0-next-insol.0",
-    "@salutejs/plasma-themes": "0.40.0",
+    "@salutejs/plasma-new-hope": "0.351.1-next-insol.0",
+    "@salutejs/plasma-themes": "0.40.1-next-insol.0",
     "@salutejs/plasma-typo": "0.42.0"
   },
   "peerDependencies": {
@@ -59,10 +59,10 @@
     "@rollup/plugin-commonjs": "^25.0.4",
     "@rollup/plugin-node-resolve": "^15.1.0",
     "@salutejs/plasma-colors": "0.16.0",
-    "@salutejs/plasma-core": "1.216.0-next-insol.0",
-    "@salutejs/plasma-cy-utils": "0.146.0-next-insol.0",
+    "@salutejs/plasma-core": "1.216.1-next-insol.0",
+    "@salutejs/plasma-cy-utils": "0.146.1-next-insol.0",
     "@salutejs/plasma-icons": "1.228.0",
-    "@salutejs/plasma-sb-utils": "0.216.0-next-insol.0",
+    "@salutejs/plasma-sb-utils": "0.216.1-next-insol.0",
     "@types/node": "16.7.13",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
