--- a/website/plasma-giga-docs/package.json
+++ b/website/plasma-giga-docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-giga-docs",
-  "version": "0.128.0-next-insol.0",
+  "version": "0.128.1-next-insol.0",
   "description": "PLASMA GIGA documentation",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -31,10 +31,10 @@
     "@docusaurus/preset-classic": "3.6.1",
     "@docusaurus/theme-live-codeblock": "3.6.1",
     "@mdx-js/react": "3.0.0",
-    "@salutejs/plasma-docs-ui": "0.520.0-next-insol.0",
-    "@salutejs/plasma-giga": "0.334.0-next-insol.0",
+    "@salutejs/plasma-docs-ui": "0.520.1-next-insol.0",
+    "@salutejs/plasma-giga": "0.334.1-next-insol.0",
     "@salutejs/plasma-icons": "1.228.0",
-    "@salutejs/plasma-themes": "0.40.0",
+    "@salutejs/plasma-themes": "0.40.1-next-insol.0",
     "@salutejs/plasma-typo": "0.42.0",
     "@svgr/webpack": "8.1.0",
     "clsx": "^1.1.1",
