ci(release-changelog-builder-action): use ignorePreReleases flag

--- a/.github/changelog-builder-config.json
+++ b/.github/changelog-builder-config.json
@@ -6,6 +6,7 @@
         }
     ],
     "ignore_labels": ["changelog-skip"],
+    "ignorePreReleases": true,
     "pr_template": "#{{DESC}}\n[PR](#{{URL}})\n",
     "custom_placeholders": [
         {
