--- a/.github/workflows/create-release-pr.yml
+++ b/.github/workflows/create-release-pr.yml
@@ -43,6 +43,7 @@ jobs:
               uses: mikepenz/release-changelog-builder-action@v4.1.0
               with:
                   fromTag: ${{ github.event.inputs.from-tag || env.FROM_TAG }}
+                  ignorePreReleases: true
                   configuration: './.github/changelog-builder-config.json'
 
             - name: List pull request
