--- a/packages/plasma-web/package.json
+++ b/packages/plasma-web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-web",
-  "version": "1.605.0",
+  "version": "1.609.2-dev.0",
   "description": "Salute Design System / React UI kit for web applications",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "exports": {
@@ -32,10 +32,10 @@
     "directory": "packages/plasma-web"
   },
   "dependencies": {
-    "@salutejs/plasma-core": "1.214.0",
-    "@salutejs/plasma-hope": "1.360.0",
-    "@salutejs/plasma-new-hope": "0.347.0",
-    "@salutejs/plasma-themes": "0.40.0",
+    "@salutejs/plasma-core": "1.216.1-dev.0",
+    "@salutejs/plasma-hope": "1.362.2-dev.0",
+    "@salutejs/plasma-new-hope": "0.351.2-dev.0",
+    "@salutejs/plasma-themes": "0.41.0-dev.0",
     "@salutejs/plasma-tokens-b2b": "1.54.0",
     "@salutejs/plasma-tokens-b2c": "0.65.0",
     "@salutejs/plasma-tokens-web": "1.69.0",
@@ -62,9 +62,9 @@
     "@rollup/plugin-commonjs": "25.0.7",
     "@rollup/plugin-node-resolve": "15.2.3",
     "@salutejs/plasma-colors": "0.16.0",
-    "@salutejs/plasma-cy-utils": "0.144.0",
-    "@salutejs/plasma-icons": "1.228.0",
-    "@salutejs/plasma-sb-utils": "0.214.0",
+    "@salutejs/plasma-cy-utils": "0.146.1-dev.0",
+    "@salutejs/plasma-icons": "1.229.0-dev.0",
+    "@salutejs/plasma-sb-utils": "0.216.2-dev.0",
     "@types/node": "16.7.13",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
