--- a/packages/themes/sdds-themes/package.json
+++ b/packages/themes/sdds-themes/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/sdds-themes",
-  "version": "0.55.1-dev.0",
+  "version": "0.56.0",
   "description": "Sdds-themes package",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
