--- a/packages/plasma-homeds/package.json
+++ b/packages/plasma-homeds/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-homeds",
-  "version": "0.335.0-dev.0",
+  "version": "0.335.0",
   "description": "Salute Design System / React UI kit for PLASMA-HOMEDS web applications",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "exports": {
@@ -27,8 +27,8 @@
     "directory": "packages/plasma-homeds"
   },
   "dependencies": {
-    "@salutejs/plasma-new-hope": "0.351.2-dev.0",
-    "@salutejs/plasma-themes": "0.41.0-dev.0"
+    "@salutejs/plasma-new-hope": "0.352.0",
+    "@salutejs/plasma-themes": "0.41.0"
   },
   "peerDependencies": {
     "react": ">=16.13.1",
@@ -53,10 +53,10 @@
     "@rollup/plugin-commonjs": "^25.0.4",
     "@rollup/plugin-node-resolve": "^15.1.0",
     "@salutejs/plasma-colors": "0.16.0",
-    "@salutejs/plasma-core": "1.216.1-dev.0",
-    "@salutejs/plasma-cy-utils": "0.146.1-dev.0",
-    "@salutejs/plasma-icons": "1.229.0-dev.0",
-    "@salutejs/plasma-sb-utils": "0.216.2-dev.0",
+    "@salutejs/plasma-core": "1.217.0",
+    "@salutejs/plasma-cy-utils": "0.147.0",
+    "@salutejs/plasma-icons": "1.229.0",
+    "@salutejs/plasma-sb-utils": "0.217.0",
     "@types/node": "16.7.13",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
